--- a/New_Intro.tex
+++ b/New_Intro.tex
@@ -107,12 +107,12 @@ Anthropology, MPI EVA), Dr.~Benjamin Marco Peter (MPI EVA,
 
 \subsection{(Archaic) Interbreeding, genomic consequences and why is it interesting}\label{(Archaic) Interbreeding, genomic consequences and why is it interesting}
 
-In recent years, the sequencing of Neandertal \citep{green_draft_2010,prufer_complete_2013,prufer_high-coverage_2017, mafessoni_high_coverage_2020} and Denisovan genomes \citep{reich_genetic_2010, meyer_high-coverage_2012} revealed that modern humans outside of Africa were in contact and interbred with other hominin populations \citep{vernot_resurrecting_2014,fu_early_2015,fu_genome_2014,sankararaman_genomic_2014,sankararaman_combined_2016,vernot_excavating_2016,malaspinas_genomic_2016}. On a genomic level, the interbreeding with a migrant population (admixture) introduces divergent chromosomes into the mixing population. Over time, meiotic recombination progressively breaks these divergent chromosomes down into admixture segments, whose size decrease with time \citep{falush_inference_2003}. Assuming that recombination events are independent from eachother, the length distribution of the admixture segments is roughly inversely proportional to the number of generations since the interbreeding happened. Hence, using this 'recombination clock', the length distribution of introgressed chromosomal segments can be used to inferred the time of an
-admixture event \citep{moorjani_history_2011,pugach_dating_2011,sankararaman_date_2012,loh_inferring_2013,sankararaman_combined_2016,pugach_gateway_2018,jacobs_multiple_2019,hellenthal_genetic_2014}. \citep{pool_inference_2009,moorjani_history_2011,gravel_population_2012,liang_lengths_2014}. One particular event of interest is the time and duration of interbreeding between Neandertals and modern humans i.e. when their habitats overlapped.  This could give a clue to the debated questions of the time of the first modern humans leaving Africa and the extinction of Neandertals. The earliest modern human remains outside of Africa are directly dated to around 188 thousand years ago (kya)  using a combination of uranium-thorium, uranium-series and electron spin resonance dating techniques  \citep{stringer_when_2018,hershkovitz_earliest_2018} and a possible extinction of Neandertals is suggested around 37 kya inferred by radiocarbon and luminescent dating of a Neandertal site in Spain \citep{zilhao_precise_2017} and 39 kya from radiocarbon dates of Neandertal sites across Europa \citep{higham_timing_2014} at the end of the Mousterian. This leaves a potential time frame for Neandertal and modern human interaction of approximately 140,000 years. Detailed genetic dating of Neandertal and modern human admixture could unveil more evidence of the timing and especially duration of this interaction. 
+In recent years, the sequencing of Neandertal \citep{green_draft_2010,prufer_complete_2013,prufer_high-coverage_2017, mafessoni_high_coverage_2020} and Denisovan genomes \citep{reich_genetic_2010, meyer_high-coverage_2012} revealed that modern humans outside of Africa were in contact and interbred with other hominin populations \citep{vernot_resurrecting_2014,fu_early_2015,fu_genome_2014,sankararaman_genomic_2014,sankararaman_combined_2016,vernot_excavating_2016,malaspinas_genomic_2016}. On a genomic level, the interbreeding with a migrant population (admixture) introduces divergent chromosomes into the mixing population. Over time, meiotic recombination progressively breaks these divergent chromosomes down into admixture segments, whose size decrease with time \citep{falush_inference_2003}. Assuming that recombination events are independent from eachother, the length distribution of the admixture segments is roughly inversely proportional to the number of generations since the interbreeding happened. Hence, using this 'recombination clock', the length distribution of introgressed chromosomal segments can be used to infer the time of an
+admixture event \citep{moorjani_history_2011,pugach_dating_2011,sankararaman_date_2012,loh_inferring_2013,sankararaman_combined_2016,pugach_gateway_2018,jacobs_multiple_2019,hellenthal_genetic_2014}. \citep{pool_inference_2009,moorjani_history_2011,gravel_population_2012,liang_lengths_2014}. One particular event of interest is the time and duration of interbreeding between Neandertals and modern humans , i.e. the time between start and end of sympatry of Neandertals and modern humans outside of Africa. This could give a clue to the debated questions of the time of the first modern humans leaving Africa and the extinction of Neandertals. The earliest modern human remains outside of Africa are directly dated to around 188 thousand years ago (kya)  using a combination of uranium-thorium, uranium-series and electron spin resonance dating techniques  \citep{stringer_when_2018,hershkovitz_earliest_2018} and a possible extinction of Neandertals is suggested around 37 kya inferred by radiocarbon and luminescent dating of a Neandertal site in Spain \citep{zilhao_precise_2017} and 39 kya from radiocarbon dates of Neandertal sites across Europa \citep{higham_timing_2014} at the end of the Mousterian. This leaves a potential time frame for Neandertal and modern human interaction of approximately 140,000 years. Detailed genetic dating of Neandertal and modern human admixture could unveil more evidence of the timing and especially duration of this interaction. 
 
 \subsection{Admixture models}\label{Admixture models}
 
-The accuracy and information content of admixture date estimates depend on the model used and its assumptions. The most widely used admixture model is the Isolation-Migration model (IM), that models divergence of two populations from an ancestral one by jointly estimating the divergence time and migration rate \citep{nielsen_distinguishing_2001,hey_multilocus_2004}. In the IM model however, migration has no time component and is assumed constant i.e. in our case from the divergence time of Neandertals and modern humans till today. Dates of Admixture events can be estimated by modeling the admixture segment length distribution. For this purpose, most models assume that admixture segments are rare and inbreeding is not significant, such that admixture segments are unlikely to recombine with eachother \citep{pool_inference_2009,liang_lengths_2014}. The segments act neutral \citep{shchur_distribution_2019} and the recombination clock is constant over time and populations \citep{gravel_population_2012}. In addition, it is generally assumed that the admixture happens over a very short time period, in a single \textit{admixture pulse} \citep{moorjani_history_2011}, usually modelled as a single generation of interbreeding.
+The accuracy and information content of admixture date estimates depend on the model used and its assumptions. The most widely used admixture model is the Isolation-Migration model (IM), which models divergence of two populations from an ancestral one by jointly estimating the divergence time and migration rate \citep{nielsen_distinguishing_2001,hey_multilocus_2004}. In the IM model however, migration has no time component and is assumed constant i.e. in our case from the divergence time of Neandertals and modern humans till today. Dates of Admixture events can be estimated by modeling the admixture segment length distribution. For this purpose, most models assume that admixture segments are rare and inbreeding is not significant, such that admixture segments are unlikely to recombine with eachother \citep{pool_inference_2009,liang_lengths_2014}. The segments act neutral \citep{shchur_distribution_2019} and the recombination clock is constant over time and populations \citep{gravel_population_2012}. In addition, it is generally assumed that the admixture happens over a very short time period, in a single \textit{admixture pulse} \citep{moorjani_history_2011}, usually modelled as a single generation of interbreeding.
 
 
 \subsection{The two approaches and their application to find archaic admixture dates}\label{the-two-approaches-and-their-application-to-find-archaic-admixture-dates}
@@ -125,9 +125,10 @@ The first approach uses the admixture-induced linkage disequilibrium (ALD) decay
 \citep{sankararaman_date_2012}. Typically, estimation of admixture dates proceeds by fitting a decay curve of pairwise LD as a function of genetic distance, using an exponential distribution whose parameters are informative for the time of an admixture pulse \citep{moorjani_history_2011,loh_inferring_2013}. Using this approach Sankararaman et al. dated the Neandertal-human admixture pulse to be  between 37,000--86,000 ya (years ago) \citep{sankararaman_date_2012}. Later, this date was refined to 40,510--54,454 ya (95\% CI) using a different ascertainment scheme combined with a different genetic map \citep{moorjani_genetic_2016}. A date was also obtained from an ancient genome to be 50,000 - 60,000 ya by adding the time since the admixture obtained from the ancient individual, by the decay of pairwise covariance between
 introgressed SNPs, to the specimens radiocarbon date \citep{fu_genome_2014}.
 
-The Denisovan modern human admixture time point was dated by using the second set of approaches. The identification of segments is largely independent from the later dating, and can be done using a variety of methods \citep{racimo_signatures_2017,seguin_orlando_paleogenomics_2014,vernot_excavating_2016,sankararaman_combined_2016,skov_detecting_2018}. The length distribution of the obtained fragments is then used to estimate the time of the admixture pulse, typically using an exponential model.
-The time point was estimated to lie in the interval between 44,000--54,000 ya using the ALD
-approach on modern day genomes \citep{sankararaman_combined_2016}. Direct identification of archaic segments in genomes from present day Southeast-Asians revealed a proportion of previously unknown Denisovan ancestry private to these populations. The segments from this ancestry are more diverged from the high-coverage Denisovan genome then previously found ones. This suggests an additional admixture event from a different population of Denisovans \citep{browning_analysis_2018}.
+The Denisovan modern human admixture time point was estimated to lie in the interval between 44,000--54,000 ya using the ALD
+approach on modern day genomes \citep{sankararaman_combined_2016}. 
+
+Using the second set of approaches, archaic segments in genomes from present day Southeast-Asians revealed a proportion of previously unknown Denisovan ancestry private to these populations. The segments from this ancestry are more diverged from the high-coverage Denisovan genome then previously found ones. This suggests an additional admixture event from a different population of Denisovans \citep{browning_analysis_2018}. The identification of segments is largely independent from the later dating, and can be done using a variety of methods \citep{racimo_signatures_2017,seguin_orlando_paleogenomics_2014,vernot_excavating_2016,sankararaman_combined_2016,skov_detecting_2018}. The length distribution of the obtained fragments is then used to estimate the time of the admixture pulse, typically using an exponential model.
 Comparing the mean length of the formerly known and newly identified Denisovan segments did, however, not reveal significant differences, suggesting a lack of power to distinguish the
 two events by time \citep{browning_analysis_2018,jacobs_multiple_2019}. Analysing genomes from Papuan individuals revealed two time separated admixture events with Denisovans, one in line with previous estimates at 45.7 kya (95\% CI 31.9-60.7 kya) and one exclusive to Papuans dated to
 be around 29.8 kya (95\% CI 14.4-50.4 kya) \citep{jacobs_multiple_2019}.
@@ -135,8 +136,7 @@ be around 29.8 kya (95\% CI 14.4-50.4 kya) \citep{jacobs_multiple_2019}.
 
 \subsection{Why can't we us the pulse model}\label{Why can't we us the pulse model}
 
-While convenient for inference, one cannot use the admixture pulse model to distinguish an extend period of admixture from an admixture pulse \citep{pickrell_toward_2014}. Here, we are chiefly interested in the duration of the interbreeding between Neandertals and modern humans, since the start and end point of that duration could inform us about the date of first sympatry of Neandertals and modern humans outside of Africa and the extinction of Neandertals, respectively.  Under an admixture pulse model, which assumes that these two times coincide, hypotheses about the impact of modern human colonization of Eurasia on Neandertal extinction cannot be evaluated. Therefore, we introduce the \textit{extended admixture pulse} model, allowing for multigeneration continuous admixture. This is a difficult problem, as it requires deconvoluting an exponential mixture, which is notoriously hard \citep{dasgupta_mixture_2008}. Thus, we carefully evaluate potential sources of biases known from previous studies, namely the demography of the admixed population, the accuracy of the recombination map and the ascertainment scheme \citep{sankararaman_date_2012,fu_genome_2014,moorjani_genetic_2016}.
-We compare the extended pulse with the simple pulse model, to examine the implications of the one-generation assumption in relation to the aforementioned potential biases. We test when the simple pulse model can be contrasted for the more general model of an extended admixture pulse.
+While convenient for inference, one cannot use the admixture pulse model to distinguish an extend period of admixture from an admixture pulse \citep{pickrell_toward_2014}. Here, we are chiefly interested in the duration of the interbreeding between Neandertals and modern humans, especially in the start and end point.  Under an admixture pulse model, which assumes that these two times coincide, hypotheses about the impact of modern human colonization of Eurasia on Neandertal extinction cannot be evaluated. Therefore, we introduce the \textit{extended admixture pulse} model, allowing for multigeneration continuous admixture. 
 
 \subsection{Previous attempts of a general admixture model and ours}\label{Previous attempts of a general admixture model and ours}
 
@@ -145,6 +145,11 @@ The extended pulse model is a generalization of the simple admixture pulse model
 
 Here we use a simpler model of continuous admixture with just two parameters, and one less than the two-pulse model of Pickrell et al. 2014 \citep{pickrell_ancient_2014}. One parameter reflects the mean admixture time, and the other the duration of the admixture event; letting this parameter go to zero thus recovers the (nested) simple pulse model. 
 This model is particularly simple if we assume that migration rate over time is Gamma distributed, in which case the distribution of admixture segment lengths has a closed form (Figure \ref{fig:fig1} B & C).
+
+Nevertheless, this is a difficult problem, as it requires deconvoluting an exponential mixture, which is notoriously hard \citep{dasgupta_mixture_2008}. Thus, we have to carefully evaluate potential sources of biases known from previous studies, namely the demography of the admixed population, the accuracy of the recombination map and the ascertainment scheme \citep{sankararaman_date_2012,fu_genome_2014,moorjani_genetic_2016}.
+We compare the extended pulse with the simple pulse model, to examine the implications of the one-generation assumption in relation to the aforementioned potential biases. We test when the simple pulse model can be contrasted for the more general model of an extended admixture pulse.
+
+
 
 \subsection{What we want to do}\label{what-we-want-to-do}
 
