Stan, Rstan and McElreath citations included

--- a/References/MyLibraryATE.bib
+++ b/References/MyLibraryATE.bib
@@ -1603,3 +1603,47 @@ A ∼180,000-year-old fossil from Israel provides evidence for early forays of H
 	pages = {e1007641},
 	file = {Full Text PDF:/home/leonardo_iasi/Zotero/storage/X2M5EFBY/Skov et al. - 2018 - Detecting archaic introgression using an unadmixed.pdf:application/pdf;Snapshot:/home/leonardo_iasi/Zotero/storage/T6C2AIHQ/article.html:text/html}
 }
+
+
+@book{mcelreath_statistical_2020,
+	title = {Statistical {Rethinking}: {A} {Bayesian} {Course} with {Examples} in {R} and {STAN}},
+	isbn = {978-0-429-63914-2},
+	shorttitle = {Statistical {Rethinking}},
+	abstract = {Statistical Rethinking: A Bayesian Course with Examples in R and Stan builds your knowledge of and confidence in making inferences from data. Reflecting the need for scripting in today's model-based statistics, the book pushes you to perform step-by-step calculations that are usually automated. This unique computational approach ensures that you understand enough of the details to make reasonable choices and interpretations in your own modeling work.  The text presents causal inference and generalized linear multilevel models from a simple Bayesian perspective that builds on information theory and maximum entropy. The core material ranges from the basics of regression to advanced multilevel models. It also presents measurement error, missing data, and Gaussian process models for spatial and phylogenetic confounding.  The second edition emphasizes the directed acyclic graph (DAG) approach to causal inference, integrating DAGs into many examples. The new edition also contains new material on the design of prior distributions, splines, ordered categorical predictors, social relations models, cross-validation, importance sampling, instrumental variables, and Hamiltonian Monte Carlo. It ends with an entirely new chapter that goes beyond generalized linear modeling, showing how domain-specific scientific models can be built into statistical analyses.  Features   Integrates working code into the main text   Illustrates concepts through worked data analysis examples   Emphasizes understanding assumptions and how assumptions are reflected in code   Offers more detailed explanations of the mathematics in optional sections   Presents examples of using the dagitty R package to analyze causal graphs   Provides the rethinking R package on the author's website and on GitHub},
+	language = {en},
+	publisher = {CRC Press},
+	author = {McElreath, Richard},
+	month = mar,
+	year = {2020},
+	note = {Google-Books-ID: 6H\_WDwAAQBAJ},
+	keywords = {Mathematics / Probability \& Statistics / General}
+}
+
+
+@misc{stan_development_team_rstan_2018,
+	title = {{RStan}: the {R} interface to {Stan}},
+	author = {Stan Development Team},
+	year = {2018}
+}
+
+
+@article{carpenter_stan_2017,
+	title = {Stan: {A} {Probabilistic} {Programming} {Language}},
+	volume = {76},
+	copyright = {Copyright (c) 2017 Bob Carpenter, Andrew Gelman, Matthew D. Hoffman, Daniel Lee, Ben Goodrich, Michael Betancourt, Marcus Brubaker, Jiqiang Guo, Peter Li, Allen Riddell},
+	issn = {1548-7660},
+	shorttitle = {Stan},
+	url = {https://www.jstatsoft.org/index.php/jss/article/view/v076i01},
+	doi = {10.18637/jss.v076.i01},
+	language = {en},
+	number = {1},
+	urldate = {2020-09-22},
+	journal = {Journal of Statistical Software},
+	author = {Carpenter, Bob and Gelman, Andrew and Hoffman, Matthew D. and Lee, Daniel and Goodrich, Ben and Betancourt, Michael and Brubaker, Marcus and Guo, Jiqiang and Li, Peter and Riddell, Allen},
+	month = jan,
+	year = {2017},
+	keywords = {algorithmic differentiation, Bayesian inference, probabilistic programming, Stan},
+	pages = {1--32},
+	file = {Full Text:/home/leonardo_iasi/Zotero/storage/GDVGF65T/Carpenter et al. - 2017 - Stan A Probabilistic Programming Language.pdf:application/pdf;Snapshot:/home/leonardo_iasi/Zotero/storage/3AH88TSU/v076i01.html:text/html}
+}
+
